--- a/DemoBlazorCRUD/DemoBlazorCRUD.Client/_Imports.razor
+++ b/DemoBlazorCRUD/DemoBlazorCRUD.Client/_Imports.razor
@@ -8,9 +8,11 @@
 @using Microsoft.JSInterop
 @using DemoBlazorCRUD.Client
 @using SharedLibrary.ProductRepositories
+@using SharedLibrary.HealthEduRepositories
 
 
 @inject IProductRepository ProductService
+@inject IHealthEduRepository HealthEduService
 @inject NavigationManager NavigationManager
 @inject IJSRuntime js
 @using SharedLibrary.Models
