--- a/DemoBlazorCRUD/DemoBlazorCRUD/Components/Layout/NavMenu.razor
+++ b/DemoBlazorCRUD/DemoBlazorCRUD/Components/Layout/NavMenu.razor
@@ -22,14 +22,21 @@
 
         <div class="nav-item px-3">
             <NavLink class="nav-link" href="product-list">
-                <span class="bi bi-list-nested" aria-hidden="true"></span> Products
+                <span class="bi bi-list-nested" aria-hidden="true"></span> 評估表單
             </NavLink>
         </div>
 
         <div class="nav-item px-3">
-            <NavLink class="nav-link" href="form">
-                <span class="bi bi-list-nested" aria-hidden="true"></span> 評估表單
+            <NavLink class="nav-link" href="healthEdu-list">
+                <span class="bi bi-list-nested" aria-hidden="true"></span> 衛教資訊
             </NavLink>
         </div>
+
+        <div class="nav-item px-3">
+            <NavLink class="nav-link" href="Information">
+                <span class="bi bi-list-nested" aria-hidden="true"></span> 資訊查詢
+            </NavLink>
+        </div>
+        
     </nav>
 </div>
